tests/baselines/reference/parserES5ForOfStatement20(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ForOfStatement20.ts(1,10): error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ForOfStatement20.ts (1 errors) ====
    for (var of = 0 in of) { }
             ~~
!!! error TS1189: The variable declaration of a 'for...in' statement cannot have an initializer.